# testing-conventions

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  putitoutthere.toml
.github/selftest/colocated-rust/red/: Cargo.toml
.github/selftest/colocated-rust/red/src/: lib.rs
.github/selftest/coverage-rust/below/: Cargo.toml  testing-conventions.toml
.github/selftest/coverage-rust/below/src/: lib.rs
.github/selftest/coverage-rust/clean/: Cargo.toml  testing-conventions.toml
.github/selftest/coverage-rust/clean/src/: lib.rs
.github/selftest/integration-rust/clean/: Cargo.toml
.github/selftest/integration-rust/clean/src/: lib.rs
.github/selftest/integration-rust/clean/tests/: integration.rs
.github/selftest/integration-rust/red/: Cargo.toml
.github/selftest/integration-rust/red/tests/: integration.rs
.github/selftest/isolation/rust-clean/: Cargo.toml
.github/selftest/isolation/rust-clean/src/: lib.rs
.github/selftest/isolation/rust-red/: Cargo.toml
.github/selftest/isolation/rust-red/src/: lib.rs
.github/selftest/mutation/clean/: Cargo.toml
.github/selftest/mutation/clean/src/: lib.rs
.github/selftest/mutation/survivor/: Cargo.toml
.github/selftest/mutation/survivor/src/: lib.rs
docs/: AGENTS.md  index.md  (+5 more)
internals/checks/: AGENTS.md  pyproject.toml  testing-conventions.toml
internals/checks/src/checks/: cli.py  cli_test.py  config.py  config_test.py
internals/checks/src/checks/below_floor/: cli.py  cli_test.py
internals/checks/src/checks/build_command_wired/: cli.py  cli_test.py
internals/checks/src/checks/build_hermetic_cli/: cli.py  cli_test.py
internals/checks/src/checks/cargo_target_dir_wired/: cli.py  cli_test.py
internals/checks/src/checks/colocated_rust_red/: cli.py  cli_test.py
internals/checks/src/checks/colocated_rust_wired/: cli.py  cli_test.py
internals/checks/src/checks/coverage_package_root_wired/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/src/checks/coverage_rust_red/: cli.py  cli_test.py
internals/checks/src/checks/coverage_rust_wired/: cli.py  cli_test.py
internals/checks/src/checks/detect_package_root_py/: cli.py  cli_test.py  evaluate.py  evaluate_test.py
internals/checks/src/checks/detect_package_root_ts/: cli.py  cli_test.py  evaluate.py  evaluate_test.py
internals/checks/src/checks/detect_routes_python/: cli.py  cli_test.py  routes.py  routes_test.py
internals/checks/src/checks/diff_scoped_wired/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/src/checks/e2e_verify_checks_out_pr_head/: block.py  block_test.py  cli.py  cli_test.py
internals/checks/src/checks/e2e_verify_scope_wired/: cli.py  cli_test.py
internals/checks/src/checks/e2e_verify_wired/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/src/checks/engines_drift/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/src/checks/engines_locked_wired/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/src/checks/gates_wired/: cli.py  cli_test.py
internals/checks/src/checks/github_helpers_wired/: cli.py  cli_test.py
internals/checks/src/checks/hermetic_wired/: cli.py  cli_test.py
internals/checks/src/checks/integration_lint_new_arms_trip/: cli.py  cli_test.py
internals/checks/src/checks/isolation_red/: cli.py  cli_test.py
internals/checks/src/checks/isolation_wired/: cli.py  cli_test.py
internals/checks/src/checks/mutation_gate/: cli.py  cli_test.py
internals/checks/src/checks/mutation_package_root_wired/: cli.py  cli_test.py
internals/checks/src/checks/mutation_wired/: cli.py  cli_test.py
internals/checks/src/checks/packaging_build_wired/: cli.py  cli_test.py
internals/checks/src/checks/packaging_package_root_red/: cli.py  cli_test.py
internals/checks/src/checks/packaging_package_root_wired/: cli.py  cli_test.py
internals/checks/src/checks/packaging_red/: cli.py  cli_test.py
internals/checks/src/checks/python_mutation_clean/: cli.py  cli_test.py
internals/checks/src/checks/red_path_hermetic_wired/: cli.py  cli_test.py  decide.py  decide_test.py
internals/checks/tests/e2e/: below_floor_e2e_test.py  build_command_wired_e2e_test.py  colocated_rust_red_e2e_test.py  colocated_rust_wired_e2e_test.py  coverage_package_root_wired_e2e_test.py  coverage_rust_red_e2e_test.py  coverage_rust_wired_e2e_test.py  detect_package_root_py_e2e_test.py  detect_package_root_ts_e2e_test.py  detect_routes_python_e2e_test.py  diff_scoped_wired_e2e_test.py  e2e_verify_checks_out_pr_head_e2e_test.py  e2e_verify_scope_wired_e2e_test.py  e2e_verify_wired_e2e_test.py  engines_drift_e2e_test.py  engines_locked_wired_e2e_test.py  gates_wired_e2e_test.py  github_helpers_wired_e2e_test.py  integration_lint_new_arms_trip_e2e_test.py  isolation_red_e2e_test.py  isolation_wired_e2e_test.py  mutation_gate_e2e_test.py  mutation_package_root_wired_e2e_test.py  mutation_wired_e2e_test.py  packaging_build_excludes_tests_e2e_test.py  packaging_build_wired_e2e_test.py  packaging_package_root_red_e2e_test.py  packaging_package_root_wired_e2e_test.py  packaging_red_e2e_test.py  python_mutation_clean_e2e_test.py  red_path_hermetic_wired_e2e_test.py  rolling_release_wired_e2e_test.py  rust_toolchain_wired_e2e_test.py  suite_toolchain_pinned_wired_e2e_test.py  uv_provisioning_wired_e2e_test.py  wiring_detect_action_e2e_test.py  wiring_e2e_default_on_e2e_test.py  wiring_packaging_default_on_e2e_test.py
internals/detect/: pyproject.toml
internals/detect/src/: detect.py  detect_test.py
internals/detect/tests/e2e/: detect_e2e_test.py
internals/detect/tests/integration/: detect_integration_test.py
internals/move-major-tag/: pyproject.toml
internals/move-major-tag/src/: move_major_tag.py  move_major_tag_test.py
internals/move-major-tag/tests/e2e/: move_major_tag_e2e_test.py
internals/move-major-tag/tests/integration/: move_major_tag_integration_test.py
spike/core/: Cargo.toml
spike/core/examples/: warm_bench.rs
spike/core/src/: lib.rs  main.rs
spike/ffi/node/: Cargo.toml  bin.js  index.d.ts  index.js  package.json
spike/ffi/node/src/: lib.rs
(+284 files in other folders)
