[package]
name = "agent-context-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "agent_context_core"

[[bin]]
name = "agent-context"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
