# Clean self-test crate `gadget`: its integration test runs first-party code for
# real and doubles nothing, so it passes `integration lint` and — built and run
# under `cargo llvm-cov` for the zero-config Rust coverage floor (#206) — covers
# every line. No deps, so `[workspace]` keeps it standalone.
[package]
name = "gadget"
version = "0.0.0"
edition = "2021"

[workspace]
